# GPU-aware-converter

./: .gitignore  20210512_memcnn+unet-backup.ipynb  20210512_memcnn+unet.ipynb  20210518_memcnn+unet-convert.ipynb  20210520_fastmri_loaddata+unet_convert_train.ipynb  20210520_fastmri_loaddata.ipynb  20210527_fastmri_loaddata-changed unet.ipynb  20210603_fastmri_loaddata-changed unet+stichable.ipynb  20210608_fastmri+invertible+stichable+checkpoint.ipynb  CMakeLists.txt  InvertCnnConverter-backup.py  InvertCnnConverter-backup2.py  InvertCnnConverter.py  README.md  Unet.py  autocheckpoint.py  build.sh  build2.sh  demo-our_system.py  demo-plain.py  demo-stitchable.py  example-Copy1.ipynb  example-system_demo.ipynb  example.ipynb  example.py  mem_hook.py  memory_example.ipynb  memory_policy.py  plot.py  requirements.txt  scratch.py
.ipynb_checkpoints/: 20210512_memcnn+unet-backup-checkpoint.ipynb  20210518_memcnn+unet-checkpoint.ipynb  20210520_fastmri_loaddata+unet_convert_train-checkpoint.ipynb  20210520_fastmri_loaddata-checkpoint.ipynb  20210527_fastmri_loaddata-changed unet-checkpoint.ipynb  example-checkpoint.ipynb  example-convert_test-checkpoint.ipynb
bind/: CMakeLists.txt  Layer4d.cpp  Layer4d.h  Tensor4d.cpp  Tensor4d.h  bind.cpp  cout_overloading.cpp  cout_overloading.h  cuda_global_setting.cpp  cuda_global_setting.h  cudnn_handle.cpp  cudnn_handle.h  helper_cuda.h  helper_math.h  memory_handle.h  memory_handle_template_impl.h
demo/: example-fastMRI-our-system-invertible-only.ipynb  example-fastMRI-plain.ipynb  fastMRIsample_image.tensor  fastMRIsample_target.tensor
ipynb backup/: 20210518_memcnn+unet.ipynb  20210603_fastmri_loaddata-changed unet+stichable.ipynb  example-fastMRI-our-system.ipynb  example-fastMRI-plain.ipynb  example-fastMRI.ipynb  memory_example.ipynb
ipynb backup/.ipynb_checkpoints/: 20210518_memcnn+unet-convert-checkpoint.ipynb  20210520_fastmri_loaddata+unet_convert_train-checkpoint.ipynb  20210520_fastmri_loaddata-checkpoint.ipynb  20210608_fastmri+invertible+stichable+checkpoint-Copy1-checkpoint.ipynb
py backup/: InvertCnnConverter-backup.py
stitchable_conv/: StitchableConv2d.py  stitcher.py  stitcher_conv2d_weight.py  unit_test.py
